--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ html {
 }
 
 body {
-  background: url("https://source.unsplash.com/Se7fVNa9IXc");
+  background: url("https://github.com/Chris-Hesterman/ch-images/blob/master/ControlPanel.jpg?raw=true");
   background-size: cover;
   margin: 0 0 25px;
   background-repeat: no-repeat;
