--- a/css/style.css
+++ b/css/style.css
@@ -72,6 +72,7 @@ footer {
 #portsite {
   color: yellow;
   opacity: .7;
+  text-shadow: 1px 1px black;
 }
 
 @media only screen and (min-width: 1300px) {
